# ai-research-explorer

./: .gitignore  .gitmessage  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
airflow/: .env.example  airflow.cfg
airflow/config/: airflow.cfg
airflow/dags/: example_hello_world_dag.py  integral_calculator_dag.py  research_pipeline_dag.py
airflow/dags/tasks/: convert_function_to_code.py  embed_and_store.py  extract_content.py  search_papers.py  summarize.py
airflow/plugins/: arxiv_api_plugin.py
airflow/plugins/libs/http/: base.py
airflow/plugins/libs/http/arxiv_api/: __init__.py  arxiv_api.py
dags/: integral_calculator_dag.py
dags/tasks/: convert_function_to_code.py
docker/: Dockerfile  requirements.txt
docker/airflow/: requirements.txt
notebooks/: test_arxiv_api.ipynb  test_extract_pdf.ipynb
scripts/: prepare-commit-msg
